fixed small bug when display was jumping on scroll

--- a/Frontend/src/pages/css/main-page-image.css
+++ b/Frontend/src/pages/css/main-page-image.css
@@ -1,6 +1,6 @@
 .image_from_fetch {
-    width: 25rem;
-    height: 15rem;
+    width: 23rem;
+    height: 13rem;
     object-fit: contain;
     border: 1px solid black;
 }
